Tests for all models and fixes based on them

--- a/examples/an_iterated_model_dataset_comparison.ipynb
+++ b/examples/an_iterated_model_dataset_comparison.ipynb
@@ -142,13 +142,13 @@
     }
    ],
    "source": [
-    "data_hillstrom = hillstrom.load_hillstrom(user_file_path=\"datasets/hillstrom.csv\",\n",
+    "data_hillstrom = hillstrom.load_hillstrom(file_path=\"datasets/hillstrom.csv\",\n",
     "                                          format_covariates=True, \n",
     "                                          normalize=True)\n",
-    "data_mayo_pbc = mayo_pbc.load_mayo_pbc(user_file_path=\"datasets/mayo_pbc.text\",\n",
+    "data_mayo_pbc = mayo_pbc.load_mayo_pbc(file_path=\"datasets/mayo_pbc.text\",\n",
     "                                       format_covariates=True, \n",
     "                                       normalize=True)\n",
-    "data_cmf_micro = cmf_micro.load_cmf_micro(user_file_path=\"datasets/cmf_micro\",\n",
+    "data_cmf_micro = cmf_micro.load_cmf_micro(file_path=\"datasets/cmf_micro\",\n",
     "                                          format_covariates=True, \n",
     "                                          normalize=True)"
    ]
