--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -312,7 +312,7 @@
    ],
    "source": [
     "# The full mostly unformatted dataset is loaded\n",
-    "data_raw = mayo_pbc.load_mayo_pbc(user_file_path=\"datasets/mayo_pbc.text\",\n",
+    "data_raw = mayo_pbc.load_mayo_pbc(file_path=\"datasets/mayo_pbc.text\",\n",
     "                                  format_covariates=False,\n",
     "                                  normalize=False)\n",
     "\n",
@@ -580,7 +580,7 @@
    ],
    "source": [
     "# The formatted dataset is loaded\n",
-    "data_mayo_pbc = mayo_pbc.load_mayo_pbc(user_file_path=\"datasets/mayo_pbc.text\",\n",
+    "data_mayo_pbc = mayo_pbc.load_mayo_pbc(file_path=\"datasets/mayo_pbc.text\",\n",
     "                                       format_covariates=True, \n",
     "                                       normalize=True)\n",
     "\n",
