--- a/examples/socio_econ_cmf_micro.ipynb
+++ b/examples/socio_econ_cmf_micro.ipynb
@@ -61,8 +61,9 @@
     "from causeinfer.evaluation import iterate_model, eval_table\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 16)\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -85,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Deprecated - see: https://github.com/andrewtavis/causeinfer/tree/master/causeinfer/data/datasets\n",
-    "# cmf_micro.download_cmf_micro() "
+    "# cmf_micro.download_cmf_micro()"
    ]
   },
   {
@@ -1611,12 +1612,11 @@
    ],
    "source": [
     "# The full mostly unformatted dataset is loaded\n",
-    "data_raw = cmf_micro.load_cmf_micro(user_file_path=\"datasets/cmf_micro\",\n",
-    "                                     format_covariates=False, \n",
-    "                                     normalize=False)\n",
+    "data_raw = cmf_micro.load_cmf_micro(\n",
+    "    file_path=\"datasets/cmf_micro\", format_covariates=False, normalize=False\n",
+    ")\n",
     "\n",
-    "df_full = pd.DataFrame(data_raw[\"dataset_full\"], \n",
-    "                       columns=data_raw[\"dataset_full_names\"])\n",
+    "df_full = pd.DataFrame(data_raw[\"dataset_full\"], columns=data_raw[\"dataset_full_names\"])\n",
     "\n",
     "display(df_full.head())\n",
     "df_full.shape"
@@ -2914,12 +2914,13 @@
    ],
    "source": [
     "# The formatted dataset is loaded\n",
-    "data_cmf_micro = cmf_micro.load_cmf_micro(user_file_path=\"datasets/cmf_micro\",\n",
-    "                                          format_covariates=True, \n",
-    "                                          normalize=True)\n",
+    "data_cmf_micro = cmf_micro.load_cmf_micro(\n",
+    "    file_path=\"datasets/cmf_micro\", format_covariates=True, normalize=True\n",
+    ")\n",
     "\n",
-    "df = pd.DataFrame(data_cmf_micro[\"dataset_full\"], \n",
-    "                  columns=data_cmf_micro[\"dataset_full_names\"])\n",
+    "df = pd.DataFrame(\n",
+    "    data_cmf_micro[\"dataset_full\"], columns=data_cmf_micro[\"dataset_full_names\"]\n",
+    ")\n",
     "display(df.head())\n",
     "df.shape"
    ]
@@ -2938,7 +2939,7 @@
     "# Covariates, treatments and responses are loaded separately\n",
     "X = data_cmf_micro[\"features\"]\n",
     "\n",
-    "y = data_cmf_micro[\"response_biz_index\"] # response_biz_index or response_women_emp\n",
+    "y = data_cmf_micro[\"response_biz_index\"]  # response_biz_index or response_women_emp\n",
     "\n",
     "w = data_cmf_micro[\"treatment\"]"
    ]
@@ -3066,7 +3067,7 @@
     "ax2.set_xticklabels(ax2.get_xticklabels())\n",
     "\n",
     "# plt.savefig('outputs_images/cmf_breakdown_hhsize_1.png', dpi=150)\n",
-    "plt,show()"
+    "plt, show()"
    ]
   },
   {
@@ -3115,7 +3116,7 @@
     "ax2.set_xticklabels(ax2.get_xticklabels())\n",
     "\n",
     "# plt.savefig('outputs_images/cmf_breakdown_anyloan_1.png', dpi=150)\n",
-    "plt,show()"
+    "plt, show()"
    ]
   },
   {
@@ -3154,12 +3155,18 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"spouse_works_wage_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"spouse_works_wage_1\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"spouse_works_wage_1\", fontsize=fontsize)\n",
     "ax2.set_ylabel(\"Counts\", fontsize=fontsize)\n",
-    "ax2.axes.set_title(\"Breakdown of spouse_works_wage_1 and Treatment\", fontsize=fontsize * 1.5)\n",
+    "ax2.axes.set_title(\n",
+    "    \"Breakdown of spouse_works_wage_1 and Treatment\", fontsize=fontsize * 1.5\n",
+    ")\n",
     "ax2.tick_params(labelsize=fontsize / 1.5)\n",
     "ax2.set_xticklabels(ax2.get_xticklabels())\n",
     "\n",
@@ -3257,10 +3264,12 @@
     }
    ],
    "source": [
-    "df.pivot_table(values=['biz_index_all_1', 'women_emp_index_1'],\n",
-    "               index='treatment',\n",
-    "               aggfunc=[np.mean],\n",
-    "               margins=True)"
+    "df.pivot_table(\n",
+    "    values=[\"biz_index_all_1\", \"women_emp_index_1\"],\n",
+    "    index=\"treatment\",\n",
+    "    aggfunc=[np.mean],\n",
+    "    margins=True,\n",
+    ")"
    ]
   },
   {
@@ -3346,8 +3355,13 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os, y_os, w_os = utils.over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
-    "                               sample_2_size=len(X_treatment), shuffle=True)"
+    "X_os, y_os, w_os = utils.over_sample(\n",
+    "    X_1=X_control,\n",
+    "    y_1=y_control,\n",
+    "    w_1=w_control,\n",
+    "    sample_2_size=len(X_treatment),\n",
+    "    shuffle=True,\n",
+    ")"
    ]
   },
   {
@@ -3376,7 +3390,7 @@
     "y_split = np.append(y_os, y_treatment, axis=0)\n",
     "w_split = np.append(w_os, w_treatment, axis=0)\n",
     "\n",
-    "X_split.shape, y_split.shape, w_split.shape # Should all be equal in the first dimension"
+    "X_split.shape, y_split.shape, w_split.shape  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -3390,9 +3404,14 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test, w_train, w_test = utils.train_test_split(X_split, y_split, w_split, \n",
-    "                                                                     percent_train=0.7, random_state=42, \n",
-    "                                                                     maintain_proportions=True)"
+    "X_train, X_test, y_train, y_test, w_train, w_test = utils.train_test_split(\n",
+    "    X_split,\n",
+    "    y_split,\n",
+    "    w_split,\n",
+    "    percent_train=0.7,\n",
+    "    random_state=42,\n",
+    "    maintain_proportions=True,\n",
+    ")"
    ]
   },
   {
@@ -3522,8 +3541,9 @@
     }
    ],
    "source": [
-    "tm = TwoModel(treatment_model=RandomForestRegressor(),\n",
-    "              control_model=RandomForestRegressor())\n",
+    "tm = TwoModel(\n",
+    "    treatment_model=RandomForestRegressor(), control_model=RandomForestRegressor()\n",
+    ")\n",
     "tm.fit(X=X_train, y=y_train, w=w_train)"
    ]
   },
@@ -3660,16 +3680,18 @@
    "outputs": [],
    "source": [
     "# New models instatiated with a more expansive scikit-learn base model (assign individually)\n",
-    "tm = TwoModel(treatment_model=RandomForestRegressor(n_estimators=200, \n",
-    "                                                    criterion='mse', \n",
-    "                                                    bootstrap=True),\n",
-    "              control_model=RandomForestRegressor(n_estimators=200, \n",
-    "                                                  criterion='mse', \n",
-    "                                                  bootstrap=True))\n",
+    "tm = TwoModel(\n",
+    "    treatment_model=RandomForestRegressor(\n",
+    "        n_estimators=200, criterion=\"mse\", bootstrap=True\n",
+    "    ),\n",
+    "    control_model=RandomForestRegressor(\n",
+    "        n_estimators=200, criterion=\"mse\", bootstrap=True\n",
+    "    ),\n",
+    ")\n",
     "\n",
-    "it = InteractionTerm(model=RandomForestRegressor(n_estimators=200, \n",
-    "                                                 criterion='mse', \n",
-    "                                                 bootstrap=True))"
+    "it = InteractionTerm(\n",
+    "    model=RandomForestRegressor(n_estimators=200, criterion=\"mse\", bootstrap=True)\n",
+    ")"
    ]
   },
   {
@@ -3694,9 +3716,9 @@
     }
    ],
    "source": [
-    "n=200\n",
+    "n = 200\n",
     "model_eval_dict = {}\n",
-    "model_eval_dict['CMF Microfinance'] = {}\n",
+    "model_eval_dict[\"CMF Microfinance\"] = {}\n",
     "model_eval_dict"
    ]
   },
@@ -3743,16 +3765,43 @@
    ],
    "source": [
     "for dataset in model_eval_dict.keys():\n",
-    "    for model in [tm, it]: #grf\n",
-    "        avg_preds, all_preds, \\\n",
-    "        avg_eval, eval_variance, \\\n",
-    "        eval_sd, all_evals = iterate_model(model=model, X_train=X_train, y_train=y_train, w_train=w_train,\n",
-    "                                           X_test=X_test, y_test=y_test, w_test=w_test, tau_test=None, n=n,\n",
-    "                                           pred_type='predict', eval_type='qini', \n",
-    "                                           normalize_eval=False, notify_iter=n/10)\n",
-    "        model_eval_dict[dataset].update({str(model).split('.')[-1].split(' ')[0]: {'avg_preds': avg_preds, 'all_preds': all_preds, \n",
-    "                                                                                   'avg_eval': avg_eval, 'eval_variance': eval_variance,\n",
-    "                                                                                   'eval_sd': eval_sd, 'all_evals': all_evals}})"
+    "    for model in [tm, it]:  # grf\n",
+    "        (\n",
+    "            avg_preds,\n",
+    "            all_preds,\n",
+    "            avg_eval,\n",
+    "            eval_variance,\n",
+    "            eval_sd,\n",
+    "            all_evals,\n",
+    "        ) = iterate_model(\n",
+    "            model=model,\n",
+    "            X_train=X_train,\n",
+    "            y_train=y_train,\n",
+    "            w_train=w_train,\n",
+    "            X_test=X_test,\n",
+    "            y_test=y_test,\n",
+    "            w_test=w_test,\n",
+    "            tau_test=None,\n",
+    "            n=n,\n",
+    "            pred_type=\"predict\",\n",
+    "            eval_type=\"qini\",\n",
+    "            normalize_eval=False,\n",
+    "            notify_iter=n / 10,\n",
+    "        )\n",
+    "        model_eval_dict[dataset].update(\n",
+    "            {\n",
+    "                str(model)\n",
+    "                .split(\".\")[-1]\n",
+    "                .split(\" \")[0]: {\n",
+    "                    \"avg_preds\": avg_preds,\n",
+    "                    \"all_preds\": all_preds,\n",
+    "                    \"avg_eval\": avg_eval,\n",
+    "                    \"eval_variance\": eval_variance,\n",
+    "                    \"eval_sd\": eval_sd,\n",
+    "                    \"all_evals\": all_evals,\n",
+    "                }\n",
+    "            }\n",
+    "        )"
    ]
   },
   {
@@ -3768,12 +3817,16 @@
    "outputs": [],
    "source": [
     "# Treatment and control prediction subtraction\n",
-    "tm_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['CMF Microfinance']['TwoModel']['avg_preds']]\n",
+    "tm_effects = [\n",
+    "    pred[0] - pred[1]\n",
+    "    for pred in model_eval_dict[\"CMF Microfinance\"][\"TwoModel\"][\"avg_preds\"]\n",
+    "]\n",
     "\n",
     "# Treatment interaction and control interaction prediction subtraction\n",
-    "it_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['CMF Microfinance']['InteractionTerm']['avg_preds']]"
+    "it_effects = [\n",
+    "    pred[0] - pred[1]\n",
+    "    for pred in model_eval_dict[\"CMF Microfinance\"][\"InteractionTerm\"][\"avg_preds\"]\n",
+    "]"
    ]
   },
   {
@@ -3794,8 +3847,12 @@
    },
    "outputs": [],
    "source": [
-    "visual_eval_dict = {'y_test': y_test, 'w_test': w_test, \n",
-    "                    'two_model': tm_effects, 'interaction_term': it_effects}"
+    "visual_eval_dict = {\n",
+    "    \"y_test\": y_test,\n",
+    "    \"w_test\": w_test,\n",
+    "    \"two_model\": tm_effects,\n",
+    "    \"interaction_term\": it_effects,\n",
+    "}"
    ]
   },
   {
@@ -3899,7 +3956,7 @@
     }
    ],
    "source": [
-    "df_visual_eval = pd.DataFrame(visual_eval_dict, columns = visual_eval_dict.keys())\n",
+    "df_visual_eval = pd.DataFrame(visual_eval_dict, columns=visual_eval_dict.keys())\n",
     "\n",
     "display(df_visual_eval.head())\n",
     "df_visual_eval.shape"
@@ -3916,7 +3973,7 @@
    },
    "outputs": [],
    "source": [
-    "models = [col for col in visual_eval_dict.keys() if col not in ['y_test', 'w_test']]"
+    "models = [col for col in visual_eval_dict.keys() if col not in [\"y_test\", \"w_test\"]]"
    ]
   },
   {
@@ -3943,14 +4000,24 @@
    "source": [
     "# fig, (ax1, ax2) = plt.subplots(ncols=2, sharey=False, figsize=(20,5))\n",
     "\n",
-    "plot_cum_effect(df=df_visual_eval, n=100, models=models, percent_of_pop=True, \n",
-    "                outcome_col='y_test', treatment_col='w_test', random_seed=42, \n",
-    "                figsize=(10,5), fontsize=20, axis=None, legend_metrics=False)\n",
+    "plot_cum_effect(\n",
+    "    df=df_visual_eval,\n",
+    "    n=100,\n",
+    "    models=models,\n",
+    "    percent_of_pop=True,\n",
+    "    outcome_col=\"y_test\",\n",
+    "    treatment_col=\"w_test\",\n",
+    "    random_seed=42,\n",
+    "    figsize=(10, 5),\n",
+    "    fontsize=20,\n",
+    "    axis=None,\n",
+    "    legend_metrics=False,\n",
+    ")\n",
     "\n",
-    "# plot_batch_responses(df=df_visual_eval, n=10, models=models, \n",
+    "# plot_batch_responses(df=df_visual_eval, n=10, models=models,\n",
     "#                      outcome_col='y_test', treatment_col='w_test', normalize=False,\n",
     "#                      figsize=None, fontsize=15, axis=ax2)\n",
-    "plt.savefig('outputs_images/cmf_cum_effect.png', dpi=150)"
+    "plt.savefig(\"outputs_images/cmf_cum_effect.png\", dpi=150)"
    ]
   },
   {
@@ -3975,16 +4042,38 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=False, figsize=(20,5))\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=False, figsize=(20, 5))\n",
     "\n",
-    "plot_cum_gain(df=df_visual_eval, n=100, models=models, percent_of_pop=True,\n",
-    "              outcome_col='y_test', treatment_col='w_test', normalize=False, random_seed=42, \n",
-    "              figsize=None, fontsize=20, axis=ax1, legend_metrics=True)\n",
+    "plot_cum_gain(\n",
+    "    df=df_visual_eval,\n",
+    "    n=100,\n",
+    "    models=models,\n",
+    "    percent_of_pop=True,\n",
+    "    outcome_col=\"y_test\",\n",
+    "    treatment_col=\"w_test\",\n",
+    "    normalize=False,\n",
+    "    random_seed=42,\n",
+    "    figsize=None,\n",
+    "    fontsize=20,\n",
+    "    axis=ax1,\n",
+    "    legend_metrics=True,\n",
+    ")\n",
     "\n",
-    "plot_qini(df=df_visual_eval, n=100, models=models, percent_of_pop=True, \n",
-    "          outcome_col='y_test', treatment_col='w_test', normalize=False, random_seed=42, \n",
-    "          figsize=None, fontsize=20, axis=ax2, legend_metrics=True)\n",
-    "plt.savefig('outputs_images/cmf_auuc_qini.png', dpi=150)"
+    "plot_qini(\n",
+    "    df=df_visual_eval,\n",
+    "    n=100,\n",
+    "    models=models,\n",
+    "    percent_of_pop=True,\n",
+    "    outcome_col=\"y_test\",\n",
+    "    treatment_col=\"w_test\",\n",
+    "    normalize=False,\n",
+    "    random_seed=42,\n",
+    "    figsize=None,\n",
+    "    fontsize=20,\n",
+    "    axis=ax2,\n",
+    "    legend_metrics=True,\n",
+    ")\n",
+    "plt.savefig(\"outputs_images/cmf_auuc_qini.png\", dpi=150)"
    ]
   },
   {
