--- a/examples/business_hilstrom.ipynb
+++ b/examples/business_hilstrom.ipynb
@@ -263,7 +263,7 @@
    ],
    "source": [
     "# The full mostly unformatted dataset is loaded\n",
-    "data_raw = hillstrom.load_hillstrom(user_file_path=\"datasets/hillstrom.csv\",\n",
+    "data_raw = hillstrom.load_hillstrom(file_path=\"datasets/hillstrom.csv\",\n",
     "                                    format_covariates=False, \n",
     "                                    normalize=False)\n",
     "\n",
@@ -519,7 +519,7 @@
    ],
    "source": [
     "# The formatted dataset is loaded\n",
-    "data_hillstrom = hillstrom.load_hillstrom(user_file_path=\"datasets/hillstrom.csv\",\n",
+    "data_hillstrom = hillstrom.load_hillstrom(file_path=\"datasets/hillstrom.csv\",\n",
     "                                          format_covariates=True, \n",
     "                                          normalize=True)\n",
     "\n",
