Reformatting testing fixtures

--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -1762,20 +1762,20 @@
    "outputs": [],
    "source": [
     "# Treatment and control probability subtraction\n",
-    "tm_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['Mayo PBC']['TwoModel']['avg_preds']]\n",
+    "tm_effects = [proba[0] - proba[1] \\\n",
+    "              for proba in model_eval_dict['Mayo PBC']['TwoModel']['avg_preds']]\n",
     "\n",
     "# Treatment interaction and control interaction probability subtraction\n",
-    "it_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['Mayo PBC']['InteractionTerm']['avg_preds']]\n",
+    "it_effects = [proba[0] - proba[1] \\\n",
+    "              for proba in model_eval_dict['Mayo PBC']['InteractionTerm']['avg_preds']]\n",
     "\n",
     "# Bianry favorable and unfavorable class probability subtraction\n",
-    "bt_effects = [pred[0] - pred[1] \\\n",
-    "              for i in model_eval_dict['Mayo PBC']['BinaryTransformation']['avg_preds']]\n",
+    "bt_effects = [proba[0] - proba[1] \\\n",
+    "              for proba in model_eval_dict['Mayo PBC']['BinaryTransformation']['avg_preds']]\n",
     "\n",
     "# Quaternary favorable and unfavorable class probability subtraction\n",
-    "qt_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['Mayo PBC']['QuaternaryTransformation']['avg_preds']]"
+    "qt_effects = [proba[0] - proba[1] \\\n",
+    "              for proba in model_eval_dict['Mayo PBC']['QuaternaryTransformation']['avg_preds']]"
    ]
   },
   {
