--- a/examples/business_hilstrom.ipynb
+++ b/examples/business_hilstrom.ipynb
@@ -65,8 +65,9 @@
     "from causeinfer.evaluation import iterate_model, eval_table\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 16)\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -263,12 +264,11 @@
    ],
    "source": [
     "# The full mostly unformatted dataset is loaded\n",
-    "data_raw = hillstrom.load_hillstrom(file_path=\"datasets/hillstrom.csv\",\n",
-    "                                    format_covariates=False, \n",
-    "                                    normalize=False)\n",
+    "data_raw = hillstrom.load_hillstrom(\n",
+    "    file_path=\"datasets/hillstrom.csv\", format_covariates=False, normalize=False\n",
+    ")\n",
     "\n",
-    "df_full = pd.DataFrame(data_raw[\"dataset_full\"], \n",
-    "                       columns=data_raw[\"dataset_full_names\"])\n",
+    "df_full = pd.DataFrame(data_raw[\"dataset_full\"], columns=data_raw[\"dataset_full_names\"])\n",
     "\n",
     "display(df_full.head())\n",
     "df_full.shape"
@@ -519,12 +519,13 @@
    ],
    "source": [
     "# The formatted dataset is loaded\n",
-    "data_hillstrom = hillstrom.load_hillstrom(file_path=\"datasets/hillstrom.csv\",\n",
-    "                                          format_covariates=True, \n",
-    "                                          normalize=True)\n",
+    "data_hillstrom = hillstrom.load_hillstrom(\n",
+    "    file_path=\"datasets/hillstrom.csv\", format_covariates=True, normalize=True\n",
+    ")\n",
     "\n",
-    "df = pd.DataFrame(data_hillstrom[\"dataset_full\"], \n",
-    "                  columns=data_hillstrom[\"dataset_full_names\"])\n",
+    "df = pd.DataFrame(\n",
+    "    data_hillstrom[\"dataset_full\"], columns=data_hillstrom[\"dataset_full_names\"]\n",
+    ")\n",
     "display(df.head())\n",
     "df.shape"
    ]
@@ -543,7 +544,9 @@
     "# Covariates, treatments and responses are loaded separately\n",
     "X = data_hillstrom[\"features\"]\n",
     "\n",
-    "y = data_hillstrom[\"response_visit\"] # response_visit, response_spend or response_conversion\n",
+    "y = data_hillstrom[\n",
+    "    \"response_visit\"\n",
+    "]  # response_visit, response_spend or response_conversion\n",
     "\n",
     "# 1 is men's campaign, 2 is women's, and 0 is control\n",
     "w = data_hillstrom[\"treatment\"]"
@@ -878,8 +881,14 @@
     }
    ],
    "source": [
-    "utils.multi_cross_tab(df=df, w_col='treatment', y_cols = ['visit', 'conversion'], \n",
-    "                            label_limit=6, margins=True, normalize=True)"
+    "utils.multi_cross_tab(\n",
+    "    df=df,\n",
+    "    w_col=\"treatment\",\n",
+    "    y_cols=[\"visit\", \"conversion\"],\n",
+    "    label_limit=6,\n",
+    "    margins=True,\n",
+    "    normalize=True,\n",
+    ")"
    ]
   },
   {
@@ -978,10 +987,12 @@
    ],
    "source": [
     "# 0=control, 1=mens, 2=women's\n",
-    "df.pivot_table(values=['visit', 'conversion', 'spend'],\n",
-    "               index='treatment',\n",
-    "               aggfunc=[np.mean],\n",
-    "               margins=True)"
+    "df.pivot_table(\n",
+    "    values=[\"visit\", \"conversion\", \"spend\"],\n",
+    "    index=\"treatment\",\n",
+    "    aggfunc=[np.mean],\n",
+    "    margins=True,\n",
+    ")"
    ]
   },
   {
@@ -1101,8 +1112,13 @@
    ],
    "source": [
     "# Over-sampling of control\n",
-    "X_os, y_os, w_os = utils.over_sample(X_1=X_control, y_1=y_control, w_1=w_control, \n",
-    "                               sample_2_size=len(X_women), shuffle=True)"
+    "X_os, y_os, w_os = utils.over_sample(\n",
+    "    X_1=X_control,\n",
+    "    y_1=y_control,\n",
+    "    w_1=w_control,\n",
+    "    sample_2_size=len(X_women),\n",
+    "    shuffle=True,\n",
+    ")"
    ]
   },
   {
@@ -1131,7 +1147,7 @@
     "y_split = np.append(y_os, y_women, axis=0)\n",
     "w_split = np.append(w_os, w_women, axis=0)\n",
     "\n",
-    "X_split.shape, y_split.shape, w_split.shape # Should all be equal in the first dimension"
+    "X_split.shape, y_split.shape, w_split.shape  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -1145,9 +1161,14 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test, w_train, w_test = utils.train_test_split(X_split, y_split, w_split, \n",
-    "                                                                     percent_train=0.7, random_state=42, \n",
-    "                                                                     maintain_proportions=True)"
+    "X_train, X_test, y_train, y_test, w_train, w_test = utils.train_test_split(\n",
+    "    X_split,\n",
+    "    y_split,\n",
+    "    w_split,\n",
+    "    percent_train=0.7,\n",
+    "    random_state=42,\n",
+    "    maintain_proportions=True,\n",
+    ")"
    ]
   },
   {
@@ -1303,8 +1324,9 @@
     }
    ],
    "source": [
-    "tm = TwoModel(treatment_model=RandomForestClassifier(),\n",
-    "              control_model=RandomForestClassifier())\n",
+    "tm = TwoModel(\n",
+    "    treatment_model=RandomForestClassifier(), control_model=RandomForestClassifier()\n",
+    ")\n",
     "tm.fit(X=X_train, y=y_train, w=w_train)"
    ]
   },
@@ -1560,24 +1582,28 @@
    "outputs": [],
    "source": [
     "# New models instatiated with a more expansive scikit-learn base model (assign individually)\n",
-    "tm = TwoModel(treatment_model=RandomForestClassifier(n_estimators=200, \n",
-    "                                                     criterion='gini', \n",
-    "                                                     bootstrap=True),\n",
-    "              control_model=RandomForestClassifier(n_estimators=200, \n",
-    "                                                   criterion='gini', \n",
-    "                                                   bootstrap=True))\n",
+    "tm = TwoModel(\n",
+    "    treatment_model=RandomForestClassifier(\n",
+    "        n_estimators=200, criterion=\"gini\", bootstrap=True\n",
+    "    ),\n",
+    "    control_model=RandomForestClassifier(\n",
+    "        n_estimators=200, criterion=\"gini\", bootstrap=True\n",
+    "    ),\n",
+    ")\n",
     "\n",
-    "it = InteractionTerm(model=RandomForestClassifier(n_estimators=200, \n",
-    "                                                  criterion='gini', \n",
-    "                                                  bootstrap=True))\n",
+    "it = InteractionTerm(\n",
+    "    model=RandomForestClassifier(n_estimators=200, criterion=\"gini\", bootstrap=True)\n",
+    ")\n",
     "\n",
-    "bt = BinaryTransformation(model=RandomForestClassifier(n_estimators=200, \n",
-    "                                                       criterion='gini', \n",
-    "                                                       bootstrap=True), regularize=False)\n",
+    "bt = BinaryTransformation(\n",
+    "    model=RandomForestClassifier(n_estimators=200, criterion=\"gini\", bootstrap=True),\n",
+    "    regularize=False,\n",
+    ")\n",
     "\n",
-    "qt = QuaternaryTransformation(model=RandomForestClassifier(n_estimators=200, \n",
-    "                                                           criterion='gini', \n",
-    "                                                           bootstrap=True), regularize=False)"
+    "qt = QuaternaryTransformation(\n",
+    "    model=RandomForestClassifier(n_estimators=200, criterion=\"gini\", bootstrap=True),\n",
+    "    regularize=False,\n",
+    ")"
    ]
   },
   {
@@ -1602,9 +1628,9 @@
     }
    ],
    "source": [
-    "n=200\n",
+    "n = 200\n",
     "model_eval_dict = {}\n",
-    "model_eval_dict['Hillstrom'] = {}\n",
+    "model_eval_dict[\"Hillstrom\"] = {}\n",
     "model_eval_dict"
    ]
   },
@@ -1675,16 +1701,43 @@
    ],
    "source": [
     "for dataset in model_eval_dict.keys():\n",
-    "    for model in [tm, it, bt, qt]: #grf\n",
-    "        avg_preds, all_preds, \\\n",
-    "        avg_eval, eval_variance, \\\n",
-    "        eval_sd, all_evals = iterate_model(model=model, X_train=X_train, y_train=y_train, w_train=w_train,\n",
-    "                                           X_test=X_test, y_test=y_test, w_test=w_test, tau_test=None, n=n,\n",
-    "                                           pred_type='predict_proba', eval_type='qini', \n",
-    "                                           normalize_eval=False, notify_iter=n/10)\n",
-    "        model_eval_dict[dataset].update({str(model).split('.')[-1].split(' ')[0]: {'avg_preds': avg_preds, 'all_preds': all_preds, \n",
-    "                                                                                   'avg_eval': avg_eval, 'eval_variance': eval_variance,\n",
-    "                                                                                   'eval_sd': eval_sd, 'all_evals': all_evals}})"
+    "    for model in [tm, it, bt, qt]:  # grf\n",
+    "        (\n",
+    "            avg_preds,\n",
+    "            all_preds,\n",
+    "            avg_eval,\n",
+    "            eval_variance,\n",
+    "            eval_sd,\n",
+    "            all_evals,\n",
+    "        ) = iterate_model(\n",
+    "            model=model,\n",
+    "            X_train=X_train,\n",
+    "            y_train=y_train,\n",
+    "            w_train=w_train,\n",
+    "            X_test=X_test,\n",
+    "            y_test=y_test,\n",
+    "            w_test=w_test,\n",
+    "            tau_test=None,\n",
+    "            n=n,\n",
+    "            pred_type=\"predict_proba\",\n",
+    "            eval_type=\"qini\",\n",
+    "            normalize_eval=False,\n",
+    "            notify_iter=n / 10,\n",
+    "        )\n",
+    "        model_eval_dict[dataset].update(\n",
+    "            {\n",
+    "                str(model)\n",
+    "                .split(\".\")[-1]\n",
+    "                .split(\" \")[0]: {\n",
+    "                    \"avg_preds\": avg_preds,\n",
+    "                    \"all_preds\": all_preds,\n",
+    "                    \"avg_eval\": avg_eval,\n",
+    "                    \"eval_variance\": eval_variance,\n",
+    "                    \"eval_sd\": eval_sd,\n",
+    "                    \"all_evals\": all_evals,\n",
+    "                }\n",
+    "            }\n",
+    "        )"
    ]
   },
   {
@@ -1699,20 +1752,28 @@
    "outputs": [],
    "source": [
     "# Treatment and control probability subtraction\n",
-    "tm_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['Hillstrom']['TwoModel']['avg_preds']]\n",
+    "tm_effects = [\n",
+    "    proba[0] - proba[1]\n",
+    "    for proba in model_eval_dict[\"Hillstrom\"][\"TwoModel\"][\"avg_preds\"]\n",
+    "]\n",
     "\n",
     "# Treatment interaction and control interaction probability subtraction\n",
-    "it_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['Hillstrom']['InteractionTerm']['avg_preds']]\n",
+    "it_effects = [\n",
+    "    proba[0] - proba[1]\n",
+    "    for proba in model_eval_dict[\"Hillstrom\"][\"InteractionTerm\"][\"avg_preds\"]\n",
+    "]\n",
     "\n",
     "# Bianry favorable and unfavorable class probability subtraction\n",
-    "bt_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['Hillstrom']['BinaryTransformation']['avg_preds']]\n",
+    "bt_effects = [\n",
+    "    proba[0] - proba[1]\n",
+    "    for proba in model_eval_dict[\"Hillstrom\"][\"BinaryTransformation\"][\"avg_preds\"]\n",
+    "]\n",
     "\n",
     "# Quaternary favorable and unfavorable class probability subtraction\n",
-    "qt_effects = [pred[0] - pred[1] \\\n",
-    "              for pred in model_eval_dict['Hillstrom']['QuaternaryTransformation']['avg_preds']]"
+    "qt_effects = [\n",
+    "    proba[0] - proba[1]\n",
+    "    for proba in model_eval_dict[\"Hillstrom\"][\"QuaternaryTransformation\"][\"avg_preds\"]\n",
+    "]"
    ]
   },
   {
@@ -1733,9 +1794,14 @@
    },
    "outputs": [],
    "source": [
-    "visual_eval_dict = {'y_test': y_test, 'w_test': w_test, \n",
-    "                    'two_model': tm_effects, 'interaction_term': it_effects, \n",
-    "                    'binary_trans': bt_effects, 'quaternary_trans': qt_effects}"
+    "visual_eval_dict = {\n",
+    "    \"y_test\": y_test,\n",
+    "    \"w_test\": w_test,\n",
+    "    \"two_model\": tm_effects,\n",
+    "    \"interaction_term\": it_effects,\n",
+    "    \"binary_trans\": bt_effects,\n",
+    "    \"quaternary_trans\": qt_effects,\n",
+    "}"
    ]
   },
   {
@@ -1851,7 +1917,7 @@
     }
    ],
    "source": [
-    "df_visual_eval = pd.DataFrame(visual_eval_dict, columns = visual_eval_dict.keys())\n",
+    "df_visual_eval = pd.DataFrame(visual_eval_dict, columns=visual_eval_dict.keys())\n",
     "\n",
     "display(df_visual_eval.head())\n",
     "df_visual_eval.shape"
@@ -1868,7 +1934,7 @@
    },
    "outputs": [],
    "source": [
-    "models = [col for col in visual_eval_dict.keys() if col not in ['y_test', 'w_test']]"
+    "models = [col for col in visual_eval_dict.keys() if col not in [\"y_test\", \"w_test\"]]"
    ]
   },
   {
@@ -1895,14 +1961,24 @@
    "source": [
     "# fig, (ax1, ax2) = plt.subplots(ncols=2, sharey=False, figsize=(20,5))\n",
     "\n",
-    "plot_cum_effect(df=df_visual_eval, n=100, models=models, percent_of_pop=True, \n",
-    "                outcome_col='y_test', treatment_col='w_test', random_seed=42, \n",
-    "                figsize=(10,5), fontsize=20, axis=None, legend_metrics=False)\n",
+    "plot_cum_effect(\n",
+    "    df=df_visual_eval,\n",
+    "    n=100,\n",
+    "    models=models,\n",
+    "    percent_of_pop=True,\n",
+    "    outcome_col=\"y_test\",\n",
+    "    treatment_col=\"w_test\",\n",
+    "    random_seed=42,\n",
+    "    figsize=(10, 5),\n",
+    "    fontsize=20,\n",
+    "    axis=None,\n",
+    "    legend_metrics=False,\n",
+    ")\n",
     "\n",
-    "# plot_batch_responses(df=df_visual_eval, n=10, models=models, \n",
+    "# plot_batch_responses(df=df_visual_eval, n=10, models=models,\n",
     "#                      outcome_col='y_test', treatment_col='w_test', normalize=False,\n",
     "#                      figsize=None, fontsize=15, axis=ax2)\n",
-    "plt.savefig('outputs_images/hillstrom_cum_effect.png', dpi=150)"
+    "plt.savefig(\"outputs_images/hillstrom_cum_effect.png\", dpi=150)"
    ]
   },
   {
@@ -1927,16 +2003,38 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=False, figsize=(20,5))\n",
+    "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=False, figsize=(20, 5))\n",
     "\n",
-    "plot_cum_gain(df=df_visual_eval, n=100, models=models, percent_of_pop=True,\n",
-    "              outcome_col='y_test', treatment_col='w_test', normalize=True, random_seed=42, \n",
-    "              figsize=None, fontsize=20, axis=ax1, legend_metrics=True)\n",
+    "plot_cum_gain(\n",
+    "    df=df_visual_eval,\n",
+    "    n=100,\n",
+    "    models=models,\n",
+    "    percent_of_pop=True,\n",
+    "    outcome_col=\"y_test\",\n",
+    "    treatment_col=\"w_test\",\n",
+    "    normalize=True,\n",
+    "    random_seed=42,\n",
+    "    figsize=None,\n",
+    "    fontsize=20,\n",
+    "    axis=ax1,\n",
+    "    legend_metrics=True,\n",
+    ")\n",
     "\n",
-    "plot_qini(df=df_visual_eval, n=100, models=models, percent_of_pop=True, \n",
-    "          outcome_col='y_test', treatment_col='w_test', normalize=True, random_seed=42, \n",
-    "          figsize=None, fontsize=20, axis=ax2, legend_metrics=True)\n",
-    "plt.savefig('outputs_images/hillstrom_qini.png', dpi=150)"
+    "plot_qini(\n",
+    "    df=df_visual_eval,\n",
+    "    n=100,\n",
+    "    models=models,\n",
+    "    percent_of_pop=True,\n",
+    "    outcome_col=\"y_test\",\n",
+    "    treatment_col=\"w_test\",\n",
+    "    normalize=True,\n",
+    "    random_seed=42,\n",
+    "    figsize=None,\n",
+    "    fontsize=20,\n",
+    "    axis=ax2,\n",
+    "    legend_metrics=True,\n",
+    ")\n",
+    "plt.savefig(\"outputs_images/hillstrom_qini.png\", dpi=150)"
    ]
   },
   {
@@ -2032,9 +2130,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:causeinfer-dev] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-causeinfer-dev-py"
   },
   "language_info": {
    "codemirror_mode": {
