Add Google Colab shield and links to examples

--- a/examples/business_hilstrom.ipynb
+++ b/examples/business_hilstrom.ipynb
@@ -16,7 +16,9 @@
    "source": [
     "**Hillstrom Dataset**\n",
     "\n",
-    "An email marketing dataset from Kevin Hillstrom's MineThatData blog."
+    "An email marketing dataset from Kevin Hillstrom's MineThatData blog.\n",
+    "\n",
+    "This notebook can also be opened in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/business_hilstrom.ipynb)."
    ]
   },
   {
