--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -16,7 +16,9 @@
    "source": [
     "**Mayo PBC Dataset**\n",
     "\n",
-    "A dataset on medical trials to combat primary biliary cholangitis (PBC, formerly cirrhosis) of the liver from the Mayo Clinic."
+    "A dataset on medical trials to combat primary biliary cholangitis (PBC, formerly cirrhosis) of the liver from the Mayo Clinic.\n",
+    "\n",
+    "This notebook can also be opened in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/medical_mayo_pbc.ipynb)."
    ]
   },
   {
