--- a/examples/socioeconomic_cmf_micro.ipynb
+++ b/examples/socioeconomic_cmf_micro.ipynb
@@ -16,7 +16,9 @@
    "source": [
     "**Center for Microfinance Dataset**\n",
     "\n",
-    "A dataset on microfinance from The Centre for Micro Finance (CMF) at the Institute for Financial Management Research (Chennai, India)."
+    "A dataset on microfinance from The Centre for Micro Finance (CMF) at the Institute for Financial Management Research (Chennai, India).\n",
+    "\n",
+    "This notebook can also be opened in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/socioeconomic_cmf_micro.ipynb)."
    ]
   },
   {
