--- a/examples/an_iterated_model_dataset_comparison.ipynb
+++ b/examples/an_iterated_model_dataset_comparison.ipynb
@@ -11,6 +11,15 @@
    ]
   },
   {
+   "source": [
+    "Iterated analysis of all included models over all inlcuded datasets.\n",
+    "\n",
+    "This notebook can also be opened in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/an_iterated_model_dataset_comparison.ipynb)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
