--- a/examples/business_hilstrom.ipynb
+++ b/examples/business_hilstrom.ipynb
@@ -18,7 +18,16 @@
     "\n",
     "An email marketing dataset from Kevin Hillstrom's MineThatData blog.\n",
     "\n",
-    "This notebook can also be opened in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/business_hilstrom.ipynb)."
+    "If using this notebook in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/business_hilstrom.ipynb), you can activate GPUs by following `Edit > Notebook settings > Hardware accelerator` and selecting `GPU`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install causeinfer -U"
    ]
   },
   {
@@ -69,6 +78,7 @@
     "pd.set_option(\"display.max_rows\", 16)\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -2069,9 +2079,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:causeinfer-dev] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-causeinfer-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2083,7 +2093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
