--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -18,7 +18,16 @@
     "\n",
     "A dataset on medical trials to combat primary biliary cholangitis (PBC, formerly cirrhosis) of the liver from the Mayo Clinic.\n",
     "\n",
-    "This notebook can also be opened in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/medical_mayo_pbc.ipynb)."
+    "If using this notebook in [Google Colab](https://colab.research.google.com/github/andrewtavis/causeinfer/blob/main/examples/medical_mayo_pbc.ipynb), you can activate GPUs by following `Edit > Notebook settings > Hardware accelerator` and selecting `GPU`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install causeinfer -U"
    ]
   },
   {
@@ -2140,7 +2149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
