--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Load-Data\" data-toc-modified-id=\"Load-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Load Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exploration-Data\" data-toc-modified-id=\"Exploration-Data-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exploration Data</a></span></li><li><span><a href=\"#Modeling-Data\" data-toc-modified-id=\"Modeling-Data-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Modeling Data</a></span></li></ul></li><li><span><a href=\"#Data-Exploration\" data-toc-modified-id=\"Data-Exploration-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data Exploration</a></span><ul class=\"toc-item\"><li><span><a href=\"#Full-Data-Visualization\" data-toc-modified-id=\"Full-Data-Visualization-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Full Data Visualization</a></span></li><li><span><a href=\"#Modeling-Data-Preparation\" data-toc-modified-id=\"Modeling-Data-Preparation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Modeling Data Preparation</a></span></li></ul></li><li><span><a href=\"#Standard-Models\" data-toc-modified-id=\"Standard-Models-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Standard Models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Two-Model\" data-toc-modified-id=\"Two-Model-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Two Model</a></span></li><li><span><a href=\"#Interaction-Term\" data-toc-modified-id=\"Interaction-Term-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interaction Term</a></span></li><li><span><a href=\"#Class-Transformations\" data-toc-modified-id=\"Class-Transformations-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Class Transformations</a></span><ul class=\"toc-item\"><li><span><a href=\"#Binary-Transformation\" data-toc-modified-id=\"Binary-Transformation-3.3.1\"><span class=\"toc-item-num\">3.3.1&nbsp;&nbsp;</span>Binary Transformation</a></span></li><li><span><a href=\"#Quaternary-Transformation\" data-toc-modified-id=\"Quaternary-Transformation-3.3.2\"><span class=\"toc-item-num\">3.3.2&nbsp;&nbsp;</span>Quaternary Transformation</a></span></li></ul></li></ul></li><li><span><a href=\"#Evaluation\" data-toc-modified-id=\"Evaluation-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Evaluation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Iterations\" data-toc-modified-id=\"Iterations-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Iterations</a></span></li><li><span><a href=\"#Visual\" data-toc-modified-id=\"Visual-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Visual</a></span></li><li><span><a href=\"#Iterated-Evaluation-and-Variance\" data-toc-modified-id=\"Iterated-Evaluation-and-Variance-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Iterated Evaluation and Variance</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Load-Data\" data-toc-modified-id=\"Load-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Load Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exploration-Data\" data-toc-modified-id=\"Exploration-Data-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exploration Data</a></span></li><li><span><a href=\"#Modeling-Data\" data-toc-modified-id=\"Modeling-Data-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Modeling Data</a></span></li></ul></li><li><span><a href=\"#Data-Exploration\" data-toc-modified-id=\"Data-Exploration-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data Exploration</a></span><ul class=\"toc-item\"><li><span><a href=\"#Full-Data-Visualization\" data-toc-modified-id=\"Full-Data-Visualization-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Full Data Visualization</a></span></li><li><span><a href=\"#Modeling-Data-Preparation\" data-toc-modified-id=\"Modeling-Data-Preparation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Modeling Data Preparation</a></span></li></ul></li><li><span><a href=\"#Standard-Models\" data-toc-modified-id=\"Standard-Models-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Standard Models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Two-Model\" data-toc-modified-id=\"Two-Model-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Two Model</a></span></li><li><span><a href=\"#Interaction-Term\" data-toc-modified-id=\"Interaction-Term-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interaction Term</a></span></li><li><span><a href=\"#Class-Transformations\" data-toc-modified-id=\"Class-Transformations-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Class Transformations</a></span><ul class=\"toc-item\"><li><span><a href=\"#Binary-Transformation\" data-toc-modified-id=\"Binary-Transformation-3.3.1\"><span class=\"toc-item-num\">3.3.1&nbsp;&nbsp;</span>Binary Transformation</a></span></li><li><span><a href=\"#Quaternary-Transformation\" data-toc-modified-id=\"Quaternary-Transformation-3.3.2\"><span class=\"toc-item-num\">3.3.2&nbsp;&nbsp;</span>Quaternary Transformation</a></span></li></ul></li><li><span><a href=\"#Reflective-Uplift\" data-toc-modified-id=\"Reflective-Uplift-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Reflective Uplift</a></span></li><li><span><a href=\"#Pessimistic-Uplift\" data-toc-modified-id=\"Pessimistic-Uplift-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Pessimistic Uplift</a></span></li></ul></li><li><span><a href=\"#Evaluation\" data-toc-modified-id=\"Evaluation-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Evaluation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Iterations\" data-toc-modified-id=\"Iterations-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Iterations</a></span></li><li><span><a href=\"#Visual\" data-toc-modified-id=\"Visual-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Visual</a></span></li><li><span><a href=\"#Iterated-Evaluation-and-Variance\" data-toc-modified-id=\"Iterated-Evaluation-and-Variance-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Iterated Evaluation and Variance</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -70,6 +70,8 @@
     "from causeinfer.standard_algorithms.quaternary_transformation import (\n",
     "    QuaternaryTransformation,\n",
     ")\n",
+    "from causeinfer.standard_algorithms.reflective import ReflectiveUplift\n",
+    "from causeinfer.standard_algorithms.pessimistic import PessimisticUplift\n",
     "from causeinfer.evaluation import qini_score, auuc_score\n",
     "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
     "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
@@ -78,6 +80,7 @@
     "pd.set_option(\"display.max_rows\", 16)\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -1627,6 +1630,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Reflective Uplift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ru = ReflectiveUplift(model=RandomForestClassifier())\n",
+    "ru.fit(X=X_train, y=y_train, w=w_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ru_probas = ru.predict_proba(X=X_test)\n",
+    "ru_probas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pessimistic Uplift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pu = PessimisticUplift(model=RandomForestClassifier())\n",
+    "pu.fit(X=X_train, y=y_train, w=w_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pu_probas = pu.predict_proba(X=X_test)\n",
+    "pu_probas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Evaluation"
    ]
   },
@@ -1670,6 +1727,14 @@
     "qt = QuaternaryTransformation(\n",
     "    model=RandomForestClassifier(n_estimators=200, criterion=\"gini\", bootstrap=True),\n",
     "    regularize=False,\n",
+    ")\n",
+    "\n",
+    "ru = ReflectiveUplift(\n",
+    "    model=RandomForestClassifier(n_estimators=200, criterion=\"gini\", bootstrap=True)\n",
+    ")\n",
+    "\n",
+    "pu = PessimisticUplift(\n",
+    "    model=RandomForestClassifier(n_estimators=200, criterion=\"gini\", bootstrap=True)\n",
     ")"
    ]
   },
@@ -1713,7 +1778,7 @@
    "outputs": [],
    "source": [
     "for dataset in model_eval_dict.keys():\n",
-    "    for model in [tm, it, bt, qt]:  # grf\n",
+    "    for model in [tm, it, bt, qt, ru, qu]:\n",
     "        (\n",
     "            avg_preds,\n",
     "            all_preds,\n",
@@ -1775,7 +1840,7 @@
     "    for proba in model_eval_dict[\"Mayo PBC\"][\"InteractionTerm\"][\"avg_preds\"]\n",
     "]\n",
     "\n",
-    "# Bianry favorable and unfavorable class probability subtraction\n",
+    "# Binary favorable and unfavorable class probability subtraction\n",
     "bt_effects = [\n",
     "    proba[0] - proba[1]\n",
     "    for proba in model_eval_dict[\"Mayo PBC\"][\"BinaryTransformation\"][\"avg_preds\"]\n",
@@ -1785,6 +1850,18 @@
     "qt_effects = [\n",
     "    proba[0] - proba[1]\n",
     "    for proba in model_eval_dict[\"Mayo PBC\"][\"QuaternaryTransformation\"][\"avg_preds\"]\n",
+    "]\n",
+    "\n",
+    "# Reflective favorable and unfavorable class probability subtraction\n",
+    "ru_effects = [\n",
+    "    proba[0] - proba[1]\n",
+    "    for proba in model_eval_dict[\"Mayo PBC\"][\"ReflectiveUplift\"][\"avg_preds\"]\n",
+    "]\n",
+    "\n",
+    "# Pessimistic favorable and unfavorable class probability subtraction\n",
+    "pu_effects = [\n",
+    "    proba[0] - proba[1]\n",
+    "    for proba in model_eval_dict[\"Mayo PBC\"][\"PessimisticUplift\"][\"avg_preds\"]\n",
     "]"
    ]
   },
@@ -1813,6 +1890,8 @@
     "    \"interaction_term\": it_effects,\n",
     "    \"binary_trans\": bt_effects,\n",
     "    \"quaternary_trans\": qt_effects,\n",
+    "    \"reflective\": ru_effects,\n",
+    "    \"pessimistic\": pu_effects,\n",
     "}"
    ]
   },
