#21 update examples with reflective and pessimistic uplift

--- a/examples/an_iterated_model_dataset_comparison.ipynb
+++ b/examples/an_iterated_model_dataset_comparison.ipynb
@@ -954,6 +954,18 @@
     "            ),\n",
     "            regularize=True,\n",
     "        )\n",
+    "\n",
+    "        ru = ReflectiveUplift(\n",
+    "            model=RandomForestClassifier(\n",
+    "                n_estimators=200, criterion=\"gini\", bootstrap=True\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        pu = PessimisticUplift(\n",
+    "            model=RandomForestClassifier(\n",
+    "                n_estimators=200, criterion=\"gini\", bootstrap=True\n",
+    "            )\n",
+    "        )\n",
     "        print(\"---{} Iterations---\".format(dataset))\n",
     "        for model in [tm_class, it_class, bt_class, qt_class]:\n",
     "            (\n",
