#21 finish Shaar example udpates, add result files, and update readme

--- a/examples/socioeconomic_cmf_micro.ipynb
+++ b/examples/socioeconomic_cmf_micro.ipynb
@@ -3745,7 +3745,7 @@
    "outputs": [],
    "source": [
     "for dataset in model_eval_dict.keys():\n",
-    "    for model in [tm, it]:  # grf\n",
+    "    for model in [tm, it]:\n",
     "        (\n",
     "            avg_preds,\n",
     "            all_preds,\n",
